# get-to-the-clinic-game

./: README.md  pyproject.toml
src/entities/: __init__.py  entities.py  orm.py
src/game/: __init__.py  game.py
src/game/entities/: __init__.py  entities.py  load_data.py  orm.py
src/game/orm/: load_data.py  orm.py
src/get_to_the_clinic_game/bot/: bot.py
src/get_to_the_clinic_game/entities/: __init__.py  entities.py  test.py
src/get_to_the_clinic_game/orm/: __init__.py  database.py  load_data.py  orm.py
tests/: test_orm.py
