[tool.poetry]
name = "get-to-the-clinic-game"
version = "0.1.0"
description = ""
authors = [
  "progbagger <thrixstudio@yandex.ru>",
  "anemon-a <annamatskevich866@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
