[tool.poetry]
name = "get-to-the-clinic-game"
version = "0.1.0"
description = ""
authors = [
  "progbagger <thrixstudio@yandex.ru>",
  "anemon-a <annamatskevich866@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
mypy = "^1.13.0"
isort = "^5.13.2"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
